tests/expectations/compiler/records/return_record_instead_of_unit_fail.out
Error [ETYC0372117]: Expected type `()` but type `test.aleo::test_credits` was found.
    --> compiler-test:8:16
     |
   8 |         return test_credits { owner: self.signer, amount };
     |                ^^^^^^^^^^^^
